# rest_api_in_python_fastapi

./: .gitignore  README.md  db.py  main.py  models.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
static/css/: bootstrap.min.css
static/js/: utils.js
templates/: error.html  home.html  layout.html  post.html  user_posts.html
